--- a/crawlers/main.ipynb
+++ b/crawlers/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns=[\n",
+    "\t'company',\n",
+    "\t'company_size',\n",
+    "\t'job_title',\n",
+    "\t'level',\n",
+    "\t'domain',\n",
+    "\t'yoe_total',\n",
+    "\t'yoe_at_company',\n",
+    "\t'total_compensation',\n",
+    "\t'location'\n",
+    "])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -29,59 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Google',\n",
-       " 'Amazon',\n",
-       " 'Apple',\n",
-       " 'Lyft',\n",
-       " 'Facebook',\n",
-       " 'Microsoft',\n",
-       " 'Uber',\n",
-       " 'Stripe',\n",
-       " 'Roblox',\n",
-       " 'Coinbase',\n",
-       " 'Databricks',\n",
-       " 'Snap',\n",
-       " 'Netflix',\n",
-       " 'LinkedIn',\n",
-       " 'Salesforce',\n",
-       " 'Hudson River Trading',\n",
-       " 'Jane Street',\n",
-       " 'Citadel',\n",
-       " 'Two Sigma',\n",
-       " 'JPMorgan Chase',\n",
-       " 'Capital One',\n",
-       " 'Oracle',\n",
-       " 'Bytedance',\n",
-       " 'Intel']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "page = requests.get('https://www.levels.fyi/companies')\n",
-    "soup = BeautifulSoup(page.content, 'html.parser')\n",
-    "companies_container = soup.find_all(\n",
-    "    'h6', class_='MuiTypography-root MuiTypography-h6 css-1v6gvkr')\n",
-    "companies = [company.text for company in companies_container]\n",
-    "companies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def crawl_company(df: pd.DataFrame, company_id: str):\n",
+    "\tdriver = webdriver.Chrome()\n",
+    "\t\n",
     "\tpage = requests.get(f'https://www.levels.fyi/companies/{company_id}')\n",
     "\tsoup = BeautifulSoup(page.content, 'html.parser')\n",
     "\tsize = soup.findAll(\n",
@@ -154,16 +127,38 @@
     "\t\t\t\t\t\t'location': location\n",
     "\t\t\t\t\t}\n",
     "\n",
+    "\t\t\t\t\tprint(new_record)\n",
+    "\n",
     "\t\t\t\t\tdf.loc[len(df)] = new_record\n",
     "\t\t\t\texcept:\n",
     "\t\t\t\t\tcontinue\n",
     "\t\texcept:\n",
     "\t\t\tpass\n",
-    "\t\t\n",
-    "\t\n",
+    "\tdriver.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Popular companies (but they are also the top-paying to me)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
+    "page = requests.get('https://www.levels.fyi/companies')\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "popular_companies_container = soup.find_all(\n",
+    "    'h6', class_='MuiTypography-root MuiTypography-h6 css-1v6gvkr')\n",
+    "popular_companies = [company.text for company in popular_companies_container]\n",
+    "popular_companies\n",
     "\n",
-    "df = pd.DataFrame(columns=[\n",
+    "popular_companies_df = pd.DataFrame(columns=[\n",
     "\t'company',\n",
     "\t'company_size',\n",
     "\t'job_title',\n",
@@ -175,16 +170,60 @@
     "\t'location'\n",
     "])\n",
     "\n",
-    "driver = webdriver.Chrome()\n",
+    "for popular_company in popular_companies:\n",
+    "\tcrawl_company(popular_companies_df, popular_company)\n",
     "\n",
-    "for company in companies:\n",
-    "\tcrawl_company(df, company)\n",
+    "popular_companies_df.to_csv('popular_companies.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### We'd like to put the desired companies here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "desired_companies = [\n",
+    "\t'shopee',\n",
+    "\t'tiki',\n",
+    "\t'grab',\n",
+    "\t'gojek-tech',\n",
+    "\t'kms-technology',\n",
+    "\t'riot-games',\n",
+    "]\n",
     "\n",
-    "driver.close()\n",
+    "desired_companies_df = pd.DataFrame(columns=[\n",
+    "\t'company',\n",
+    "\t'company_size',\n",
+    "\t'job_title',\n",
+    "\t'level',\n",
+    "\t'domain',\n",
+    "\t'yoe_total',\n",
+    "\t'yoe_at_company',\n",
+    "\t'total_compensation',\n",
+    "\t'location'\n",
+    "])\n",
     "\n",
-    "df.to_csv('data.csv', index=False)\n",
+    "for desired_company in desired_companies:\n",
+    "\tcrawl_company(desired_companies_df, desired_company)\n",
     "\n",
-    "df"
+    "desired_companies_df.to_csv('desired_companies.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([popular_companies_df, desired_companies_df])\n",
+    "df.to_csv('all_companies.csv', index=False)"
    ]
   }
  ],
