chore: update data format

--- a/crawlers/main.ipynb
+++ b/crawlers/main.ipynb
@@ -98,7 +98,7 @@
     "\t\t\t\t\t\tby=By.TAG_NAME, value=\"span\"\n",
     "\t\t\t\t\t).find_element(\n",
     "\t\t\t\t\t\tby=By.TAG_NAME, value=\"span\"\n",
-    "\t\t\t\t\t).text.split('|')[0]\n",
+    "\t\t\t\t\t).text.split('|')[0].strip()\n",
     "\t\t\t\t\tlevel = cells[1].find_element(\n",
     "\t\t\t\t\t\tby=By.TAG_NAME, value=\"p\"\n",
     "\t\t\t\t\t).text\n",
