refactor: cleanup code and update new data

--- a/crawlers/main.ipynb
+++ b/crawlers/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,25 +22,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "global_df = pd.DataFrame(columns=[\n",
-    "\t'company',\n",
-    "\t'company_size',\n",
-    "\t'job_title',\n",
-    "\t'level',\n",
-    "\t'domain',\n",
-    "\t'yoe_total',\n",
-    "\t'yoe_at_company',\n",
-    "\t'total_compensation',\n",
-    "\t'location'\n",
-    "])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,15 +67,22 @@
     "                yoe_total = cells[2].find_element(by=By.TAG_NAME, value=\"p\").text\n",
     "                yoe_at_company = cells[2].find_element(by=By.TAG_NAME, value=\"span\").text\n",
     "                total_compensation = cells[3].find_element(by=By.TAG_NAME, value=\"p\").text\n",
+    "                compensation_details = cells[3].find_element(by=By.TAG_NAME, value=\"span\").text.split('|')\n",
+    "                base = compensation_details[0].strip()\n",
+    "                stock = compensation_details[1].strip()\n",
+    "                bonus = compensation_details[2].strip()\n",
     "\n",
     "                new_record = {\n",
-    "                    'company': company_id,\n",
+    "                    'company': company_id.replace('-', ' ').title(),\n",
     "                    'company_size': size,\n",
     "                    'job_title': job_title_id.replace('-', ' ').title(),\n",
     "                    'level': level,\n",
     "                    'domain': field,\n",
     "                    'yoe_total': yoe_total,\n",
     "                    'yoe_at_company': yoe_at_company,\n",
+    "                    'base': base,\n",
+    "                    'stock': stock,\n",
+    "                    'bonus': bonus,\n",
     "                    'total_compensation': total_compensation,\n",
     "                    'location': location\n",
     "                }\n",
@@ -127,7 +115,7 @@
     "    scraped_dfs = []\n",
     "\n",
     "    # Use ThreadPoolExecutor to run the scraping function in parallel\n",
-    "    with concurrent.futures.ThreadPoolExecutor() as executor:\n",
+    "    with concurrent.futures.ThreadPoolExecutor(max_workers=5) as executor:\n",
     "        for job_title_id in job_title_ids:\n",
     "            # Pass df, company_id, job_title_id, and size as arguments to the scraping function\n",
     "            thread = executor.submit(scrape_job_data, company_id, job_title_id, size)\n",
@@ -151,29 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_df = pd.DataFrame(columns=[\n",
-    "\t'company',\n",
-    "\t'company_size',\n",
-    "\t'job_title',\n",
-    "\t'level',\n",
-    "\t'domain',\n",
-    "\t'yoe_total',\n",
-    "\t'yoe_at_company',\n",
-    "\t'total_compensation',\n",
-    "\t'location'\n",
-    "])\n",
-    "\n",
-    "test_df = scrape_job_data('shopee', 'software-engineer', '10000+')\n",
-    "\n",
-    "test_df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -182,9 +147,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Google',\n",
+       " 'Amazon',\n",
+       " 'Apple',\n",
+       " 'Lyft',\n",
+       " 'Facebook',\n",
+       " 'Microsoft',\n",
+       " 'Uber',\n",
+       " 'Stripe',\n",
+       " 'Roblox',\n",
+       " 'Coinbase',\n",
+       " 'Databricks',\n",
+       " 'Snap',\n",
+       " 'Netflix',\n",
+       " 'LinkedIn',\n",
+       " 'Salesforce',\n",
+       " 'Hudson River Trading',\n",
+       " 'Jane Street',\n",
+       " 'Citadel',\n",
+       " 'Two Sigma',\n",
+       " 'JPMorgan Chase',\n",
+       " 'Capital One',\n",
+       " 'Oracle',\n",
+       " 'Bytedance',\n",
+       " 'Intel']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "page = requests.get('https://www.levels.fyi/companies')\n",
@@ -196,31 +195,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "popular_companies_df = pd.DataFrame(columns=[\n",
-    "\t'company',\n",
-    "\t'company_size',\n",
-    "\t'job_title',\n",
-    "\t'level',\n",
-    "\t'domain',\n",
-    "\t'yoe_total',\n",
-    "\t'yoe_at_company',\n",
-    "\t'total_compensation',\n",
-    "\t'location'\n",
-    "])\n",
-    "\n",
-    "for popular_company in popular_companies:\n",
-    "\tpopular_companies_df = pd.concat(\n",
-    "\t\t[popular_companies_df, crawl_company(popular_company)], ignore_index=True)\n",
-    "\n",
-    "popular_companies_df.to_csv('popular_companies.csv', index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -228,31 +202,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Crawled companies:\n",
+    "- Logitech\n",
+    "- Microsoft\n",
+    "- Netflix\n",
+    "- Uber\n",
+    "- Visa\n",
+    "- Google\n",
+    "- Apple\n",
+    "- JPMorgan Chase\n",
+    "- Shopee\n",
+    "- Tiki\n",
+    "- Grab\n",
+    "- Gojek Tech\n",
+    "- Riot Games\n",
+    "- LinkedIn\n",
+    "- Intel\n",
+    "- MongoDB\n",
+    "- Roblox\n",
+    "- Oracle\n",
+    "- Stripe\n",
+    "- Facebook\n",
+    "- Amazon\n",
+    "- Snap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "desired_companies = [\n",
-    "\t'shopee',\n",
-    "\t'tiki',\n",
-    "\t'grab',\n",
-    "\t'gojek-tech',\n",
-    "\t'kms-technology',\n",
-    "\t'riot-games',\n",
-    "]\n",
+    "# make sure to check if the url exists: https://www.levels.fyi/company/{company-name}\n",
+    "desired_companies = ['company-name']\n",
     "\n",
-    "desired_companies_df = pd.DataFrame(columns=[\n",
-    "\t'company',\n",
-    "\t'company_size',\n",
-    "\t'job_title',\n",
-    "\t'level',\n",
-    "\t'domain',\n",
-    "\t'yoe_total',\n",
-    "\t'yoe_at_company',\n",
-    "\t'total_compensation',\n",
-    "\t'location'\n",
-    "])\n",
+    "desired_companies_df = pd.DataFrame()\n",
     "\n",
     "for desired_company in desired_companies:\n",
     "\tdesired_company_df = crawl_company(desired_company)\n",
@@ -261,23 +248,6 @@
     "desired_companies_df.to_csv('desired_companies.csv', index=False)\n",
     "\n",
     "desired_companies_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Grouping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([popular_companies_df, desired_companies_df])\n",
-    "df.to_csv('all_companies.csv', index=False)"
    ]
   }
  ],
@@ -297,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
