feat: preprocess data

--- a/notebooks/1-crawler.ipynb
+++ b/notebooks/1-crawler.ipynb
@@ -245,7 +245,7 @@
     "\tdesired_company_df = crawl_company(desired_company)\n",
     "\tdesired_companies_df = pd.concat([desired_companies_df, desired_company_df], ignore_index=True)\n",
     "\n",
-    "desired_companies_df.to_csv('desired_companies.csv', index=False)\n",
+    "desired_companies_df.to_csv('./data/desired_companies.csv', index=False)\n",
     "\n",
     "desired_companies_df"
    ]
